--- a/.github/workflows/check-issue-comment.yml
+++ b/.github/workflows/check-issue-comment.yml
@@ -12,12 +12,14 @@ jobs:
   check-issue-comment:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Check issue comment
         uses: actions/github-script@v6
+        env:
+          ISSUE_COMMENT: "${{ github.event.comment.body }}"
         with:
           script: |
-            const comment="${{ github.event.comment.body }}"
+            const comment=process.env.ISSUE_COMMENT;
             if (comment.startsWith('octocat')) {
               console.log("Issue comment starts with 'octocat'")
             } else {
